--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,84 @@
   --radius-3xl: calc(var(--radius) + 12px);
   --radius-4xl: calc(var(--radius) + 16px);
 
+  /* Primary-Pink scale */
+  --color-pink-100: #FFF2F6;
+  --color-pink-200: #FFDFEA;
+  --color-pink-300: #FEA2C1;
+  --color-pink-400: #F7558B;
+  --color-pink-500: #EA2C6C;
+  --color-pink-600: #d81b5f;
+  --color-pink-700: #c2185a;
+  --color-pink-800: #AD1457;
+  --color-pink-900: #880E4F;
+  --color-pink-1000: #6B053B;
+
+  /* Secondary-Mint scale */
+  --color-mint-100: #e8fcf1;
+  --color-mint-200: #c6f6dc;
+  --color-mint-300: #a0f1c6;
+  --color-mint-400: #74ebaf;
+  --color-mint-500: #1add8a;
+  --color-mint-600: #04C377;
+  --color-mint-700: #00a663;
+  --color-mint-800: #00854c;
+  --color-mint-900: #005933;
+  --color-mint-1000: #00351E;
+
+  /* Gray scale */
+  --color-gray-white: #FFFFFF;
+  --color-gray-100: #FAFAFA;
+  --color-gray-200: #F5F5F5;
+  --color-gray-300: #ECECEC;
+  --color-gray-400: #D9D9D9;
+  --color-gray-500: #AEAEAE;
+  --color-gray-600: #8F8F8F;
+  --color-gray-700: #767676;
+  --color-gray-800: #555555;
+  --color-gray-900: #333333;
+  --color-gray-1000: #171717;
+
+  /* Red scale */
+  --color-red-100: #FFF1F0;
+  --color-red-200: #FFD5D2;
+  --color-red-300: #FD9891;
+  --color-red-400: #FF6B55;
+  --color-red-500: #FF271D;
+  --color-red-600: #D8151D;
+  --color-red-700: #B70E23;
+  --color-red-800: #930926;
+  --color-red-900: #7A0527;
+  --color-red-1000: #42221F;
+
+  /* Blue scale */
+  --color-blue-100: #E9F2FF;
+  --color-blue-200: #CCE0FF;
+  --color-blue-300: #84B8FF;
+  --color-blue-400: #579DFF;
+  --color-blue-500: #388BFF;
+  --color-blue-600: #1D7AFC;
+  --color-blue-700: #0C66E4;
+  --color-blue-800: #0055CC;
+  --color-blue-900: #09326C;
+  --color-blue-1000: #1C2B41;
+
+  /* Yellow scale */
+  --color-yellow-100: #FEF7D7;
+  --color-yellow-200: #FCF1B5;
+  --color-yellow-300: #FAE161;
+  --color-yellow-400: #F9D414;
+  --color-yellow-500: #EFB806;
+  --color-yellow-600: #D7A204;
+  --color-yellow-700: #A67D03;
+  --color-yellow-800: #896601;
+  --color-yellow-900: #644C02;
+  --color-yellow-1000: #322601;
+
+  /* Gray Transparent */
+  --color-gray-transparent-40: rgba(0, 0, 0, 0.4);
+  --color-gray-transparent-50: rgba(0, 0, 0, 0.5);
+  --color-gray-transparent-60: rgba(0, 0, 0, 0.6);
+
   --heading-l: 28px;
   --heading-m: 24px;
   --heading-s: 20px;
